--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.11"
 replit = "^3.2.4"
-Pillow = "^9.5.0"
 psutil = "^5.9.5"
 wikipedia = "^1.4.0"
 discord = "^2.3.0"
+Pillow = "9.5.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
