--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = ">=3.10.0,<3.11"
 replit = "^3.2.4"
 psutil = "^5.9.5"
 wikipedia = "^1.4.0"
-discord = "^2.3.0"
+discord = "2.3.1"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
