--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.jsondata
-.jsondata/leaderboard.json
-.jsondata/warns.json
-.imagegenerator
+/.jsondata
+/.jsondata/leaderboard.json
+/.jsondata/warns.json
+/.imagegenerator
